# sigapi-back

./: README.md
SIGAPI/: db.sqlite3  manage.py  pyproject.toml  urls.py
SIGAPI/SIGAPI/: asgi.py  settings.py  urls.py  wsgi.py
SIGAPI/SIGAPI/templates/: index.html
SIGAPI/SIGAPI_rest/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py  viewsets.py
SIGAPI/SIGAPI_rest/migrations/: 0001_initial.py  0002_remove_egresso_id_alter_egresso_user.py  0003_remove_pais_aluno_filho_remove_pais_aluno_user_and_more.py
SIGAPI/SIGAPI_rest/models/: curso.py
SIGAPI/Scripts/: manual_test.py  test.py
SIGAPI/myenv/: pyvenv.cfg
SIGAPI/myenv/Scripts/: activate  activate.bat
