[tool.poetry]
name = "sigapi"
version = "0.1.0"
description = ""
authors = ["rondinele <rondynelif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
