[tool.poetry]
name = "sigapi"
version = "0.1.0"
description = ""
authors = ["rondinele <rondynelif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"
djangorestframework-simplejwt = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "2.14.5"
pylint-django = "^2.5.3"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"